kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: REPLACE_WITH_ECR_FRONTEND_IMAGE
          ports:
            - containerPort: 5500
          readinessProbe:
            httpGet:
              path: /
              port: 5500
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ecommerce
spec:
  selector:
    app: frontend
  ports:
    - port: 5500
      targetPort: 5500
