kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 5001
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5500
